--- a/package.json
+++ b/package.json
@@ -22,5 +22,36 @@
   "bugs": {
     "url": "https://github.com/bahmutov/slides-now-core/issues"
   },
-  "homepage": "https://github.com/bahmutov/slides-now-core"
+  "homepage": "https://github.com/bahmutov/slides-now-core",
+  "devDependencies": {
+    "check-types": "~1.1.1",
+    "coffeeify": "~0.6.0",
+    "grunt": "~0.4.2",
+    "grunt-bower-task": "~0.3.4",
+    "grunt-browserify": "~2.0.0",
+    "grunt-bump": "0.0.13",
+    "grunt-clean-console": "~0.1.1",
+    "grunt-coffeelint": "0.0.8",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jade": "~0.10.0",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-stylus": "~0.12.0",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-deps-ok": "~0.1.7",
+    "grunt-gh-pages": "~0.9.1",
+    "grunt-jshint-solid": "0.0.1",
+    "grunt-nice-package": "~0.2.1",
+    "grunt-npm2bower-sync": "~0.3.0",
+    "grunt-replace": "~0.6.2",
+    "gt": "~0.8.33",
+    "jshint-stylish": "~0.1.5",
+    "marked": "~0.2.10",
+    "matchdep": "~0.3.0",
+    "pre-git": "0.0.15",
+    "string": "~1.8.0",
+    "time-grunt": "~0.2.9"
+  }
 }
