--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
     "url": "git://github.com/bahmutov/slides-now-core.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt"
   }
 }
