--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "url": "git://github.com/bahmutov/slides-now-core.git"
   },
   "scripts": {
-    "test": "grunt"
+    "test": "npm run unit",
+    "unit": "node node_modules/gt/gt.js --output src/test/*.coffee"
   }
 }
