added pre-commit test

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   ],
   "license": "MIT",
   "main": "index.js",
+  "pre-commit": "npm test",
   "repository": {
     "type": "git",
     "url": "git://github.com/bahmutov/slides-now-core.git"
