--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-jade": "~0.11.0",
     "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-qunit": "~0.4.0",
     "grunt-contrib-stylus": "~0.13.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
